rediseña el mapa de asientos y permite apartar hasta 3 por person
